QE compact coordinator must create the ECOC after renaming to temp

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.3.0-rc0
    • Affects Version/s: None
    • Component/s: Queryable Encryption
    • None
    • Fully Compatible
    • ALL
    • Security 2022-11-28, Security 2022-12-12, Security 2022-12-26, Security 2023-01-09
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In sharded clusters, doing QE writes will fail with the following error:

      { "nInserted" : 1, "nMatched" : 0, "nModified" : 0, "nRemoved" : 0, "nUpserted" : 0, "writeErrors" : [ { "index" : 0, "code" : 263, "errmsg" : "Transaction was aborted :: caused by :: from shard rs1 :: caused by :: Cannot create new collections inside distributed transactions" } ] }
      

      if the ECOC collection does not exist and needs to be implicitly created. This normally happens when the compaction operation renames the ECOC collection to a name suffixed with .compact, but does not create a new ECOC collection as replacement.

            Assignee:
            Erwin Pe
            Reporter:
            Erwin Pe
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: