SERVER-71405 QE compact coordinator must create the ECOC after renaming to temp